[package]
name = "kube-virt-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.87.1", features = ["runtime", "derive", "unstable-runtime"] }
k8s-openapi = { version = "0.20.0", features = ["latest","schemars"] }
tokio = { version = "1.35.0", features = ["full"] }
anyhow = "1.0.75"
serde = { version = "1.0.193", features = ["derive", "serde_derive"] }
serde_json = "1.0.108"
schemars = "0.8.16"
garde = "0.16.3"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
futures = "0.3.29"
async-trait = "0.1.74"
rand = "0.8.5"
ipnet = { version = "2.9.0", features = ["json", "schemars", "serde"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
kube-runtime = { version = "0.87.1", features = ["unstable-runtime-reconcile-on"] }
serde_yaml = "0.9.27"
pnet = { version = "0.34.0", features = ["serde"] }
